--- a/schedule/templates/schedule/calendar_month.html
+++ b/schedule/templates/schedule/calendar_month.html
@@ -18,10 +18,10 @@
   {% month_table calendar periods.month "regular" %}
 </div>
 <div class="navigation">
-  <a href="{% url tri_month_calendar calendar.slug %}{% querystring_for_date periods.month.start 2 %}">
+  <a href="{% url "tri_month_calendar" calendar.slug %}{% querystring_for_date periods.month.start 2 %}">
     Three Month Calendar
   </a>
-  <a href="{% url year_calendar calendar.slug %}{% querystring_for_date periods.month.start 1%}">
+  <a href="{% url "year_calendar" calendar.slug %}{% querystring_for_date periods.month.start 1%}">
     Full Year Calendar
   </a>
 </div>
