--- a/schedule/templates/schedule/calendar_week.html
+++ b/schedule/templates/schedule/calendar_week.html
@@ -9,10 +9,10 @@
 {% block body %}
 
 <div class="navigation">
-  <a href="{% url month_calendar calendar.slug %}{% querystring_for_date periods.week.start 2 %}">
+  <a href="{% url "month_calendar" calendar.slug %}{% querystring_for_date periods.week.start 2 %}">
     Month
   </a>
-  <a href="{% url year_calendar calendar.slug %}{% querystring_for_date periods.week.start 1%}">
+  <a href="{% url "year_calendar" calendar.slug %}{% querystring_for_date periods.week.start 1%}">
     Year
   </a>
 </div>
@@ -21,7 +21,7 @@
     <div class="calendarname">{{ calendar.name }}</div>
     {% prevnext "week_calendar" calendar.slug periods.week "\Week W, M Y" %}
     <div class="now">
-      <a href="{% url week_calendar calendar.slug %}">
+      <a href="{% url "week_calendar" calendar.slug %}">
         This week
       </a>
     </div>
@@ -31,7 +31,7 @@
   {% for day in periods.week.get_days %}
     <div class="weekday weekday{{forloop.counter}}">
       <div class="weekdayheader">
-        <a href="{% url day_calendar calendar.slug %}{% querystring_for_date day.start %}">
+        <a href="{% url "day_calendar" calendar.slug %}{% querystring_for_date day.start %}">
           {{day.start|date:"l, d"}}
         </a>
       </div>
